fix: Resolver problema de scroll en avisos de exámenes y añadir sincronización en la nube
- Reducir espacio vertical total en 16px (padding de .screen, margen de header, margen de alerta)
- Añadir flex-shrink: 0 para prevenir compresión de elementos
- Incluir array de exámenes en estructura de datos de Firebase
- Actualizar saveToFirebase() para incluir exámenes
- Actualizar loadFromFirebase() para restaurar exámenes
- Añadir triggers de sincronización a saveExam() y deleteExam()
- Los exámenes ahora persisten entre dispositivos con debounce de 2s

--- a/index.html
+++ b/index.html
@@ -1912,8 +1912,15 @@ async function loadFromFirebase() {
       if (data.cuatrimestres) {
         localStorage.setItem('cuatrimestres', JSON.stringify(data.cuatrimestres));
         renderSemesters();
-        showSyncIndicator('Datos cargados ✓', 'success');
       }
+      if (data.exams) {
+        localStorage.setItem('exams', JSON.stringify(data.exams));
+        // Actualizar avisos si estamos en el menú
+        if (menuScreen.classList.contains('active')) {
+          checkUpcomingExams();
+        }
+      }
+      showSyncIndicator('Datos cargados ✓', 'success');
     } else {
       showSyncIndicator('No hay datos en la nube', 'success');
     }
@@ -1935,6 +1942,7 @@ async function saveToFirebase() {
   try {
     const data = {
       cuatrimestres: obtenerCuatrimestres(),
+      exams: JSON.parse(localStorage.getItem('exams') || '[]'),
       lastSync: firebase.firestore.FieldValue.serverTimestamp(),
       version: '1.0'
     };
@@ -2498,6 +2506,7 @@ function saveExam() {
   
   closeAddExamForm();
   renderExams();
+  scheduleSyncToFirebase(); // Sincronizar con la nube
   showSyncIndicator('Examen añadido correctamente', 'success');
   // Actualizar avisos en menú principal
   if (menuScreen.classList.contains('active')) {
@@ -2595,6 +2604,7 @@ function deleteExam(examId) {
   localStorage.setItem('exams', JSON.stringify(exams));
   
   renderExams();
+  scheduleSyncToFirebase(); // Sincronizar con la nube
   showSyncIndicator('Examen eliminado', 'success');
   // Actualizar avisos en menú principal
   if (menuScreen.classList.contains('active')) {
