fix: Corregir apertura del modal de detalles de examen con animación (v1.8.5)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
       <div class="modal-header" style="background: linear-gradient(135deg, #4285f4 0%, #34a853 100%); position: relative;">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
-        <div class="app-version">v1.8.4</div>
+        <div class="app-version">v1.8.5</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
@@ -2895,12 +2895,16 @@ function openExamDetailModal(examId) {
     </div>
   `;
   
-  document.getElementById('exam-detail-modal').style.display = 'flex';
+  const modal = document.getElementById('exam-detail-modal');
+  modal.style.display = 'flex';
+  setTimeout(() => modal.classList.add('show'), 10);
 }
 
 // Cerrar modal de detalles del examen
 function closeExamDetailModal() {
-  document.getElementById('exam-detail-modal').style.display = 'none';
+  const modal = document.getElementById('exam-detail-modal');
+  modal.classList.remove('show');
+  setTimeout(() => modal.style.display = 'none', 250);
 }
 
 // Eliminar examen desde el modal de detalles
