--- a/index.html
+++ b/index.html
@@ -1319,13 +1319,17 @@ container.addEventListener('dragstart', e => {
   const card = e.target.closest('.card');
   if (!card) return;
   
-  // Crear preview flotante
+  // Ocultar la tarjeta original
+  card.style.opacity = '0';
+  
+  // Crear preview flotante opaco
   dragPreview = card.cloneNode(true);
   dragPreview.classList.add('drag-preview');
   dragPreview.style.position = 'fixed';
   dragPreview.style.width = card.offsetWidth + 'px';
   dragPreview.style.pointerEvents = 'none';
   dragPreview.style.zIndex = '9999';
+  dragPreview.style.opacity = '1';
   document.body.appendChild(dragPreview);
   
   // Actualizar posición del preview
@@ -1340,6 +1344,9 @@ container.addEventListener('dragstart', e => {
   
   // Limpiar al soltar
   const cleanup = () => {
+    // Restaurar visibilidad de la tarjeta original
+    card.style.opacity = '';
+    
     if (dragPreview && dragPreview.parentNode) {
       dragPreview.remove();
     }
