--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
   <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="Alternar modo oscuro" title="Modo oscuro">🌙</button>
   <button id="show-archived-toggle" class="show-archived-toggle" aria-label="Mostrar archivados" title="Mostrar archivados">📦</button>
   <button id="firebase-btn" class="firebase-toggle" aria-label="Sincronización en la nube" title="Sincronizar con la nube">☁️</button>
+  <button id="changelog-btn" class="changelog-toggle" aria-label="Historial de cambios" title="Historial de cambios">📝</button>
   <div id="sync-indicator" class="sync-indicator" style="display:none;">
     <span class="sync-spinner"></span>
     <span class="sync-text">Sincronizando...</span>
@@ -168,7 +169,7 @@
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
       <div class="modal-header" style="background: linear-gradient(135deg, #4285f4 0%, #34a853 100%); position: relative;">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
-        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.1.0</div>
+        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.1.1</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
@@ -2153,13 +2154,19 @@ function openChangelog() {
   if (!modal) return;
   
   modal.style.display = 'flex';
+  setTimeout(() => {
+    modal.classList.add('show');
+  }, 10);
   loadChangelog();
 }
 
 function closeChangelog() {
   const modal = document.getElementById('changelog-modal');
   if (!modal) return;
-  modal.style.display = 'none';
+  modal.classList.remove('show');
+  setTimeout(() => {
+    modal.style.display = 'none';
+  }, 250);
 }
 
 async function loadChangelog() {
@@ -2297,6 +2304,7 @@ function getCommitIcon(message) {
 // Event listeners para changelog
 function initChangelogListeners() {
   const versionBadge = document.getElementById('version-badge');
+  const changelogBtn = document.getElementById('changelog-btn');
   const closeBtn = document.getElementById('close-changelog');
   const showTutorialBtn = document.getElementById('show-tutorial-btn');
   const changelogModal = document.getElementById('changelog-modal');
@@ -2304,6 +2312,15 @@ function initChangelogListeners() {
   if (versionBadge) {
     // Click simple para abrir changelog
     versionBadge.addEventListener('click', (e) => {
+      e.preventDefault();
+      e.stopPropagation();
+      openChangelog();
+    });
+  }
+  
+  if (changelogBtn) {
+    // Botón discreto en el menú principal
+    changelogBtn.addEventListener('click', (e) => {
       e.preventDefault();
       e.stopPropagation();
       openChangelog();
