feat: Agregar animación SVG al tutorial de gestos rápidos mostrando swipe (v2.1.3)

--- a/index.html
+++ b/index.html
@@ -80,22 +80,59 @@
       <div class="onboarding-slide">
         <div class="onboarding-image">
           <svg width="200" height="160" viewBox="0 0 200 160" fill="none">
-            <rect x="40" y="40" width="80" height="60" rx="8" fill="#ff4d4d" opacity="0.3"/>
-            <path d="M 80 70 L 120 70" stroke="#dc2626" stroke-width="4" stroke-linecap="round" marker-end="url(#arrowred)"/>
-            <text x="140" y="75" font-size="12" fill="#dc2626" font-weight="bold">Eliminar</text>
+            <!-- Tarjeta superior - Swipe izquierda (Eliminar) -->
+            <g id="card-left">
+              <rect x="60" y="30" width="80" height="50" rx="8" fill="white" stroke="#e2e8f0" stroke-width="2">
+                <animate attributeName="x" values="60;20;60" dur="3s" repeatCount="indefinite"/>
+              </rect>
+              <line x1="70" y1="45" x2="130" y2="45" stroke="#cbd5e1" stroke-width="2">
+                <animate attributeName="x1" values="70;30;70" dur="3s" repeatCount="indefinite"/>
+                <animate attributeName="x2" values="130;90;130" dur="3s" repeatCount="indefinite"/>
+              </line>
+              <line x1="70" y1="55" x2="110" y2="55" stroke="#cbd5e1" stroke-width="2">
+                <animate attributeName="x1" values="70;30;70" dur="3s" repeatCount="indefinite"/>
+                <animate attributeName="x2" values="110;70;110" dur="3s" repeatCount="indefinite"/>
+              </line>
+              <line x1="70" y1="65" x2="120" y2="65" stroke="#cbd5e1" stroke-width="2">
+                <animate attributeName="x1" values="70;30;70" dur="3s" repeatCount="indefinite"/>
+                <animate attributeName="x2" values="120;80;120" dur="3s" repeatCount="indefinite"/>
+              </line>
+            </g>
+            <!-- Fondo rojo "Eliminar" -->
+            <rect x="20" y="30" width="120" height="50" rx="8" fill="#ef4444">
+              <animate attributeName="opacity" values="0;0.8;0" dur="3s" repeatCount="indefinite"/>
+            </rect>
+            <text x="30" y="60" font-size="14" fill="white" font-weight="bold">
+              🗑️ Eliminar
+              <animate attributeName="opacity" values="0;1;0" dur="3s" repeatCount="indefinite"/>
+            </text>
             
-            <rect x="40" y="110" width="80" height="60" rx="8" fill="#3b82f6" opacity="0.3" transform="translate(160, 280) scale(-1, 1)"/>
-            <path d="M 80 140 L 40 140" stroke="#2563eb" stroke-width="4" stroke-linecap="round" marker-end="url(#arrowblue)"/>
-            <text x="15" y="145" font-size="12" fill="#2563eb" font-weight="bold">Info</text>
-            
-            <defs>
-              <marker id="arrowred" markerWidth="10" markerHeight="10" refX="9" refY="3" orient="auto">
-                <polygon points="0 0, 10 3, 0 6" fill="#dc2626"/>
-              </marker>
-              <marker id="arrowblue" markerWidth="10" markerHeight="10" refX="9" refY="3" orient="auto">
-                <polygon points="0 0, 10 3, 0 6" fill="#2563eb"/>
-              </marker>
-            </defs>
+            <!-- Tarjeta inferior - Swipe derecha (Información) -->
+            <g id="card-right">
+              <rect x="60" y="95" width="80" height="50" rx="8" fill="white" stroke="#e2e8f0" stroke-width="2">
+                <animate attributeName="x" values="60;100;60" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+              </rect>
+              <line x1="70" y1="110" x2="130" y2="110" stroke="#cbd5e1" stroke-width="2">
+                <animate attributeName="x1" values="70;110;70" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+                <animate attributeName="x2" values="130;170;130" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+              </line>
+              <line x1="70" y1="120" x2="110" y2="120" stroke="#cbd5e1" stroke-width="2">
+                <animate attributeName="x1" values="70;110;70" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+                <animate attributeName="x2" values="110;150;110" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+              </line>
+              <line x1="70" y1="130" x2="120" y2="130" stroke="#cbd5e1" stroke-width="2">
+                <animate attributeName="x1" values="70;110;70" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+                <animate attributeName="x2" values="120;160;120" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+              </line>
+            </g>
+            <!-- Fondo azul "Información" -->
+            <rect x="60" y="95" width="120" height="50" rx="8" fill="#3b82f6">
+              <animate attributeName="opacity" values="0;0.8;0" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+            </rect>
+            <text x="125" y="125" font-size="14" fill="white" font-weight="bold">
+              ℹ️ Info
+              <animate attributeName="opacity" values="0;1;0" dur="3s" repeatCount="indefinite" begin="1.5s"/>
+            </text>
           </svg>
         </div>
         <h2>Gestos Rápidos</h2>
@@ -169,7 +206,7 @@
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
       <div class="modal-header" style="background: linear-gradient(135deg, #4285f4 0%, #34a853 100%); position: relative;">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
-        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.1.2</div>
+        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.1.3</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
