feat: Sincronización inmediata con Firebase sin delay (v2.1.7)

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
       <div class="modal-header" style="background: linear-gradient(135deg, #4285f4 0%, #34a853 100%); position: relative;">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
-        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.1.6</div>
+        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.1.7</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
@@ -2860,14 +2860,10 @@ async function saveToFirebase() {
   }
 }
 
-// Sincronización automática con debounce
+// Sincronización automática inmediata
 function scheduleSyncToFirebase() {
   if (!currentUser) return;
-  
-  clearTimeout(syncTimeout);
-  syncTimeout = setTimeout(() => {
-    saveToFirebase();
-  }, 2000);
+  saveToFirebase();
 }
 
 // Event listener del botón Firebase
